deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
        - name: http-server
          image: 412133775/http-server:v1.7
          readinessProbe:
            exec:
              command:
                - cat
                - /tmp/healthy
            initialDelaySeconds: 30
            periodSeconds: 5
