deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: http-server
